--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
+    // Retrofit / networking
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation("com.squareup.retrofit2:converter-jaxb:2.9.0")
+    implementation ("com.squareup.okhttp3:okhttp:4.8.1")
+    implementation ("com.squareup.okhttp3:logging-interceptor:4.8.1")
+
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation 'com.github.thelumiereguy:NeumorphismView-Android:1.5'
