--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:2.4.1")
 
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
+
 
 
 
