--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation("androidx.room:room-ktx:2.4.1")
 
     implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation "androidx.media:media:1.2.1"
+
 
 
 
